templates/network-policy_template.yaml
---
# Source: network-policy/templates/NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: network-policy-1.0.2
    app.kubernetes.io/name: network-policy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/managed-by: Helm
  name: allow-from-openshift-monitoring
spec: 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
---
# Source: network-policy/templates/NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: network-policy-1.0.2
    app.kubernetes.io/name: network-policy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/managed-by: Helm
  name: deny-all-by-default
spec: 
  ingress: []
  podSelector: {}
---
# Source: network-policy/templates/NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: network-policy-1.0.2
    app.kubernetes.io/name: network-policy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/managed-by: Helm
  name: allow-all-internal-same-namespace
spec: 
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
# Source: network-policy/templates/NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: network-policy-1.0.2
    app.kubernetes.io/name: network-policy
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/managed-by: Helm
  name: allow-from-openshift-ingress
spec: 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector: {}
  policyTypes:
  - Ingress
